add headre and footer feel free to edit it becouse i just used them to see what happen

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,4 +1,7 @@
 @import url('../styles/post.css');
+@import url('../styles/footer.css');
+
+@import url('../styles/header.css');
 
 :root {
   --background: #ffffff;
@@ -37,6 +40,10 @@ a {
   color: inherit;
   text-decoration: none;
 }
+main {
+  padding-top: 80px; /* Adjust to match your header height */
+}
+
 
 @media (prefers-color-scheme: dark) {
   html {
