--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -8,6 +8,9 @@
   --foreground: #171717;
 }
 
+.test{
+  background-color: red;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -42,6 +45,7 @@ a {
 }
 main {
   padding-top: 80px; /* Adjust to match your header height */
+  /* height: 80dvh; */
 }
 
 
