--- a/frontend/app/styles/post.css
+++ b/frontend/app/styles/post.css
@@ -86,7 +86,7 @@
 .comments-list {
   margin-top: 0.75rem;
   padding: 0.75rem 1rem;
-  background-color: #f9f9f9;
+  background-color: #c0c0c0;
   border-left: 3px solid #1e40af;
   border-radius: 0 0 8px 8px;
   max-height: 200px; /* restrict height */
@@ -244,4 +244,44 @@
   .post-actions div button {
     padding: 0.2rem 0.5rem ;
   }
+}
+
+/* =================================== no posts ============================== */
+
+.no-posts-message {
+  text-align: center;
+  padding: 40px 20px;
+  color: #555;
+  background-color: #292323;
+  border: 2px dashed #cfcfcf;
+  border-radius: 8px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.no-posts-message h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #adadad;
+}
+
+.no-posts-message p {
+  font-size: 16px;
+  color: #818181;
+}
+.create-post-button {
+  margin-top: 12rem;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.create-post-button:hover {
+  background-color: #0056b3;
 }
