--- a/frontend/app/styles/home.css
+++ b/frontend/app/styles/home.css
@@ -1,9 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-@import url("./styles/post.css");
-@import url("./styles/footer.css");
-@import url("./styles/header.css");
-@import url("./styles/home.css");
-
 :root {
   --bg-color: #12111a;
   --card-bg: #1c1b23;
@@ -27,16 +21,8 @@
   --shadow-color: rgba(0, 0, 0, 0.6);
 }
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Inter", sans-serif;
-}
-
-body {
-  width: 100%;
-  height: 100vh;
-  background-color: var(--bg-color);
-  color: var(--text-primary);
+main{
+    width: 100%;
+    height: 100%;
+    padding: 100px 20px;
 }
