--- a/frontend/app/styles/chat.css
+++ b/frontend/app/styles/chat.css
@@ -56,12 +56,22 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
+  gap: 2px;
 }
 
 .chatPage .type button{
   width: 50%;
   padding: 10px 20px;
   cursor: pointer;
+  border: none;
+  outline: none;
+  background-color: var(--bg-color);
+  color: var(--text-primary);
+  border-radius: 8px;
+}
+
+.chatPage .type button:hover{
+  background-color: var(--border-color);
 }
 
 .chatPage .friends{
