--- a/frontend/app/styles/chat.css
+++ b/frontend/app/styles/chat.css
@@ -59,19 +59,33 @@
   gap: 2px;
 }
 
-.chatPage .type button{
-  width: 50%;
+.chatPage .type a{
+  width: 45%;
   padding: 10px 20px;
+  text-align: center;
   cursor: pointer;
   border: none;
   outline: none;
-  background-color: var(--bg-color);
   color: var(--text-primary);
   border-radius: 8px;
   font-size: 1.05em;
+  text-decoration: none;
+  position: relative;
+  border: 1px solid var(--border-color);
 }
 
-.chatPage .type button:hover{
+.chatPage .type a.active::after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--accent-color);
+  border-radius: 8px;
+}
+
+.chatPage .type a:hover{
   background-color: var(--border-color);
 }
 
@@ -83,6 +97,14 @@
 
 .chatPage .friends ul{
   display: flex;
-  flex-direction: column;
-  gap: 15px;
+  flex-direction: column; 
+}
+
+.chatPage .friends ul li{
+  padding: 13px 26px;
+  cursor: pointer;
+}
+
+.chatPage .friends ul li:hover{
+  background-color: var(--border-color);
 }
