commit user-profile header

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -6,6 +6,7 @@
 @import url("./styles/register.css");
 @import url("./styles/chat.css");
 @import url("./styles/login.css");
+@import url("./styles/profile.css");
 
 :root {
   --bg-color: #12111a;
