--- a/frontend/app/styles/profile.css
+++ b/frontend/app/styles/profile.css
@@ -22,9 +22,93 @@
 }
 
 .profile-container {
-    width: 100%;
+    width: 70%;
     height: 100%;
-    padding: 10px 5px;
-    border-radius: 8px;
-    border:1px solid var(--text-secondary);
+    padding: 10px 10px;
+    border-radius: 10px;
+    border: 1px solid var(--text-secondary);
+    margin: auto;
+}
+
+.profile-header {
+    width: 100%;
+    display: flex;
+
+    gap: 10px;
+}
+
+.avatar-profile {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 1px solid var(--text-primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--text-primary);
+
+    h2 {
+        color: var(--input-bg);
+    }
+
+}
+
+.full-name-profile {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+/* From Uiverse.io by mrhyddenn */
+/* The switch - the box around the slider */
+.switch {
+    font-size: 17px;
+    position: relative;
+    display: inline-block;
+    width: 62px;
+    height: 35px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 1;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0px;
+    background: #fff;
+    transition: .4s;
+    border-radius: 30px;
+    border: 1px solid #ccc;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 1.9em;
+    width: 1.9em;
+    border-radius: 16px;
+    left: 1.2px;
+    top: 0;
+    bottom: 0;
+    background-color: white;
+    box-shadow: 0 2px 5px #999999;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #5fdd54;
+    border: 1px solid transparent;
+}
+
+input:checked+.slider:before {
+    transform: translateX(1.5em);
 }
