update style chat page

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -86,12 +86,12 @@ svg {
 
 @media (min-width: 1200px) {
   .container {
-    width: 100%;
+    width: 1200px;
   }
 }
 
-@media (min-width: 1900px) {
+/* @media (min-width: 1900px) {
   .container {
     max-width: 1900px;
   }
-}
+} */
